<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bt_utils</name>
  <version>0.1.0</version>
  <description>Package containing the base classes (virtual and templates) to ease the development of the BT leaf nodes.</description>
  <maintainer email="michele.colledanchise@gmail.com">Michele Colledanchise</maintainer>
  <license>BSD-3</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp_v3</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>std_msgs</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
